--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,7 +9,7 @@ li{ list-style:none;}
 a{ color:#335884; text-decoration:none;}
 a:hover{ color:#f00; text-decoration:underline;}
 
-#header{ clear:both; position:relative; margin:0 auto; margin-top:15px; width:947px; height:116px; border:1px solid #dfdfdf; background:url(../images/topbg.gif) repeat-x;}
+#header{ clear:both; position:relative; margin:0 auto; margin-top:15px; width:auto; height:116px; border:1px solid #dfdfdf; background:url(../../images/topbg.gif) repeat-x;}
 	#top_login{ padding:6px 0 0 10px;}
 		.login_input{ height:19px; line-height:19px; width:118px; border:none; background:url(../../images/login_input.gif) no-repeat; margin:0 14px 0 6px;}
 		.login_sub{ width:51px; height:19px; border:none; background:url(../../images/login_sub.gif) no-repeat;}
@@ -36,7 +36,7 @@ a:hover{ color:#f00; text-decoration:underline;}
 		#mainnav ul li.headLi{ background:none;}
 		
 		
-#container{ clear:both; width:947px; height:100%; overflow:hidden; margin:14px auto 0;}
+#container{ clear:both; width:100%; height:100%; overflow:hidden; margin:14px auto 0;}
 	.sidebar{ float:left; width:157px;}
 		.sidebar h1{ clear:both;}
 		.side_list{ height:250px; background:url(../../images/sidebarbg.gif) no-repeat; margin:2px 0 12px;}
